fix name spacing

--- a/_sass/style/style.scss
+++ b/_sass/style/style.scss
@@ -1510,7 +1510,7 @@ div {
   color: $palette-aku-greyText;
   font-family: Open Sans,sans-serif;
   font-weight: 800;
-  margin: 0;
+  margin: 0 0 2rem 0;
 }
 
 h4.guide__accordion-title {
